--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,18 @@
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=northwind
-spring.datasource.username=sa
-spring.datasource.password=sa
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
-spring.jpa.hibernate.ddl-auto=create-drop
-
 # PROFILES
  # Comma-separated list of active profiles. Can be overridden by a command line switch.
 spring.profiles.active=dev
  # Unconditionally activate the specified comma-separated list of profiles (or list of profiles if using YAML).
 spring.profiles.include=dev, prod
+
+# Hibernate ddl auto (create, create-drop, update): with "update" the database
+# schema will be automatically updated accordingly to java entities found in
+# the project
+spring.jpa.hibernate.ddl-auto = update
+
+# Naming strategy
+spring.jpa.hibernate.naming.strategy = org.hibernate.cfg.ImprovedNamingStrategy
+
+# Show or not log for each sql query
+spring.jpa.show-sql = true
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.generate_statistics=true
