--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,3 @@
-spring.profiles.active=dev
 # H2 Web Console (H2ConsoleProperties)
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
@@ -7,22 +6,9 @@ spring.h2.console.settings.web-allow-others=true
 
 # Connection information
 spring.jpa.properties.jdbc.driverClassName=org.h2.Driver
-spring.jpa.properties.jdbc.url=jdbc:h2:mem:nothwind;DB_CLOSE_DELAY=-1
+spring.jpa.properties.jdbc.url=jdbc:h2:~/northwind;DB_CLOSE_DELAY=-1
 spring.jpa.properties.jdbc.username=sa
 spring.jpa.properties.jdbc.password=sa
-
-# Show or not log for each sql query
-spring.jpa.show-sql = true
-spring.jpa.generate-ddl=true
-
-# Hibernate ddl auto (create, create-drop, update): with "update" the database
-# schema will be automatically updated accordingly to java entities found in
-# the project
-spring.jpa.hibernate.ddl-auto = update
-
-# Naming strategy
-spring.jpa.hibernate.naming.strategy = org.hibernate.cfg.ImprovedNamingStrategy
-
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
