--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,1 +1,7 @@
-spring.profiles.active=prod
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=northwind
+spring.datasource.username=sa
+spring.datasource.password=sa
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
