--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.jpa.hibernate.naming.strategy = org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.show-sql = true
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.generate_statistics=true
+
+spring.aop.proxy-target-class=true
