--- a/pom.xml
+++ b/pom.xml
@@ -37,12 +37,13 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-			<exclusions>
-				<exclusion>
-					<artifactId>hibernate-entitymanager</artifactId>
-					<groupId>org.hibernate</groupId>
-				</exclusion>
-			</exclusions>
+				<exclusions>
+					<exclusion>
+					<groupId>org.hibernate.javax.persistence</groupId>
+    				<artifactId>hibernate-jpa-2.1-api</artifactId>
+<!--     				<version>1.0.2.Final</version> -->
+					</exclusion>
+				</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
