more changes to configuration

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>com.keyholesoftware.demo.archunit</groupId>
 	<artifactId>demoArchUnit</artifactId>
-	<version>0.0.2-SNAPSHOT</version>
+	<version>0.0.3-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>demoArchUnit</name>
@@ -15,8 +15,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.14.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<version>2.0.4.RELEASE</version>
 	</parent>
 
 	<properties>
@@ -26,8 +25,8 @@
 		<junit.version>4.12</junit.version>
 		<archunit.version>0.8.2</archunit.version>
 		<!-- <basedir>./</basedir> -->
-		<!-- <softwareDistribution.home>C:/softwaredistribution</softwareDistribution.home> -->
-		<!-- <java.home.8>${softwareDistribution.home}\oracle\jdk1.8.0_162</java.home.8> -->
+		<softwareDistribution.home>C:\softwaredistribution</softwareDistribution.home>
+		<java.home.8>${softwareDistribution.home}\oracle\jdk1.8.0_162</java.home.8>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -37,13 +36,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-				<exclusions>
-					<exclusion>
+			<exclusions>
+				<exclusion>
 					<groupId>org.hibernate.javax.persistence</groupId>
-    				<artifactId>hibernate-jpa-2.1-api</artifactId>
-<!--     				<version>1.0.2.Final</version> -->
-					</exclusion>
-				</exclusions>
+					<artifactId>hibernate-jpa-2.1-api</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -57,8 +55,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		<!-- <dependency> <groupId>org.apache.commons</groupId> <artifactId>commons-lang3</artifactId> 
-			<version>3.4</version> </dependency> -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
@@ -123,17 +119,16 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>tomcat-dbcp</artifactId>
 			<version>9.0.1</version>
 		</dependency>
 
-		<!-- <dependency> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-devtools</artifactId> 
-			<scope>runtime</scope> </dependency> -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-compiler-plugin</artifactId>
@@ -153,33 +148,39 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.6.1</version>
+					<version>3.7.0</version>
 					<configuration>
 						<verbose>true</verbose>
 						<fork>true</fork>
+						<release>8</release>
 						<executable>${java.home.8}/bin/javac</executable>
 						<compilerVersion>${java.version}</compilerVersion>
 						<source>${java.version}</source>
 						<target>${java.version}</target>
 						<failOnError>false</failOnError>
-						<useIncrementalCompilation>false</useIncrementalCompilation>
-						<failOnWarning default-value="false">true</failOnWarning>
-						<meminitial>128m</meminitial>
-						<maxmem>512m</maxmem>
-						<optimize default-value="false">true</optimize>
-						<release>1.8</release>
-						<showDeprecation default-value="false">true</showDeprecation>
-						<showWarnings default-value="false">true</showWarnings>
-						<skipMultiThreadWarning
-							default-value="false">true</skipMultiThreadWarning>
+						<!-- <useIncrementalCompilation>false</useIncrementalCompilation> -->
+						<!-- <failOnWarning default-value="false">true</failOnWarning> -->
+						<!-- <meminitial>128m</meminitial> -->
+						<!-- <maxmem>512m</maxmem> -->
+						<!-- <optimize default-value="false">true</optimize> -->
+						<!-- <release>1.8</release> -->
+						<!-- <showDeprecation default-value="false">true</showDeprecation> -->
+						<!-- <showWarnings default-value="false">true</showWarnings> -->
+						<!-- <skipMultiThreadWarning -->
+						<!-- default-value="false">true</skipMultiThreadWarning> -->
 						<compilerArgs>
 							<arg>-verbose</arg>
 							<arg>-Xlint:all,-options,-path</arg>
 							<arg>-J-Duser.language=en_us</arg>
 						</compilerArgs>
 					</configuration>
-					<!-- <dependencies> <dependency> <groupId>org.ow2.asm</groupId> <artifactId>asm</artifactId> 
-						<version>6.2</version> Use newer version of ASM </dependency> </dependencies> -->
+					<dependencies>
+						<dependency>
+							<groupId>org.ow2.asm</groupId>
+							<artifactId>asm</artifactId>
+							<version>6.2</version>	<!-- Use newer version of ASM -->
+						</dependency>
+					</dependencies>
 				</plugin>
 				<plugin>
 					<groupId>org.springframework.boot</groupId>
